2013-04-11  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/gpasm.h.in, gpasm/coff.c, gpasm/coff.h,
    gpasm/gpasm.c, gpasm/scan.l, libgputils/gpcofflink.c,
    libgputils/gpcoffgen.c, libgputils/gpcoffgen.h:
    fixed enhancement requests
    #61 - "__idlocs and __config generate line numbers" and
    #58 Generate mpasm compatible .config sections
  * gputils/gpvo.c, gpasm/evaluate.c: cosmetic changes

2013-04-10  Borut Razem  <borutr@users.sourceforge.net>
  *  gpasm/testsuite/gpasm.mchip/objfiles/objsec2.o,
     gpasm/testsuite/gpasm.mchip/objfiles/objsec3.o:
     regenerated with MPASMX 5.49
  * config3.lst: regenerated with MPASMX 5.49

2013-04-03  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpreadobj.c: strengthened bad object format detection

2013-04-01  Borut Razem  <borutr@users.sourceforge.net>
  * gputils/gpvo.c: fixed printing 1 byte config data

2013-03-31  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c: print only lower 4 addres bytes in mempry map listing
  * libgputils/gpwritehex.c: added function start_record() and other
    small changes
  * gpasm/gpasm.c, libgputils/gpcfg.h:  cosmetic changes
  * gpasm/testsuite/gpasm.project/asmfiles/config3.asm: make it assemble
    with MPASM(X)
  * gpasm/directive.c,
    gpasm/testsuite/gpasm.project/asmfiles/config4.asm,
    gpasm/testsuite/gpasm.project/hexfiles/config4.hex,
    gpasm/testsuite/gpasm.project/listfiles/config4.lst:
    don't emit untouched bytes to the hex file for CONFIG directive;
    added regression test

2013-03-30  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/parse.y: fixed cblock listing

2013-03-29  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpsymbol.c: fixed bug
    #262 - "Define and macro arguments: Error[124] : Illegal argument"
  * gpasm/testsuite/gpasm.project/asmfiles/sym.asm,
    gpasm/testsuite/gpasm.project/listfiles/sym.lst,
    gpasm/testsuite/gpasm.project/hexfiles/sym.hex: